backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-backend
  template:
    metadata:
      labels:
        app: my-backend
    spec:
      containers:
        - name: my-backend
          image: saurabhbagh/my-web-app:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 80  

---
apiVersion: v1
kind: Service
metadata:
  name: my-backend
spec:
  type: ClusterIP
  selector:
    app: my-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
